--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -22,7 +22,7 @@
             <table width="90%" id="general-table" align="center" style="display: table;">
                 <tbody>
                 <tr>
-                    <td class="label">商品分类:</td>
+                    <td class="label">商品主分类:</td>
                     <td>
                         <!--添加商品的分类-->
                         <select name="cat_id">
