提交修改内容

--- a/Application/Admin/View/Goods/lst.html
+++ b/Application/Admin/View/Goods/lst.html
@@ -70,6 +70,7 @@
         <table cellpadding="3" cellspacing="1">
             <tr>
                 <th>编号</th>
+                <th>主分类</th>
                 <th>品牌</th>
                 <th>商品名称</th>
                 <th>logo</th>
@@ -82,6 +83,7 @@
             <?php foreach($listData as $k=>$v):?>
             <tr class="tron">
                 <td align="center"><?php echo $v['id'];?></td>
+                <td align="center"><?php echo $v['cat_name'];?></td>
                 <td align="center">
                     <?php foreach($brandData as $key => $value):?>
                     <?php if($value['id']==$v['brand_id']): ?>
