--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -1,5 +1,11 @@
 <layout name="Layout/layout"/>
 
+<style>
+.clear{
+    clear: both;
+}
+</style>
+
 <div class="tab-div">
     <!-- tab bar -->
     <div id="tabbar-div">
@@ -30,6 +36,25 @@
                             <option value="<?php echo $value['id'];?>"><?php echo str_repeat('-',8*$value['level']).$value['cat_name'];?></option>
                             <?php endforeach;?>
                         </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">拓展分类: </td>
+                    <td>
+                        <div style="width: 160px;">
+                            <button id="btn_add_category" style="float: left;">添加一个拓展分类</button>
+                            <ul id="ul_category" style="padding-left:0px;list-style: none; float: left;">
+                                <li>
+                                    <select  name="cat_id">
+                                        <option value="">请选择主分类</option>
+                                        <?php foreach($catDatas as $key => $value):?>
+                                        <option value="<?php echo $value['id'];?>"><?php echo str_repeat('-',8*$value['level']).$value['cat_name'];?></option>
+                                        <?php endforeach;?>
+                                    </select>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="clear"></div>
                     </td>
                 </tr>
                 <tr>
@@ -246,5 +271,9 @@
     $('#btn_add_pic').click(function () {
         var file = '<li><input type="file" name="goods_pics[]"/></li>';
         $('#ul_add_pic').append(file);
+    });
+    $('#btn_add_category').click(function (event) {
+        $('#ul_category').append($('#ul_category').find('li').eq(0).clone());
+        event.preventDefault();
     });
 </script>
