使用Group_contact进行显示商品的拓展属性的拼接的内容

--- a/Application/Admin/View/Goods/lst.html
+++ b/Application/Admin/View/Goods/lst.html
@@ -71,6 +71,7 @@
             <tr>
                 <th>编号</th>
                 <th>主分类</th>
+                <th>拓展分类</th>
                 <th>品牌</th>
                 <th>商品名称</th>
                 <th>logo</th>
@@ -84,6 +85,7 @@
             <tr class="tron">
                 <td align="center"><?php echo $v['id'];?></td>
                 <td align="center"><?php echo $v['cat_name'];?></td>
+                <td align="center"><?php echo $v['ext_cat_name'];?></td>
                 <td align="center">
                     <?php foreach($brandData as $key => $value):?>
                     <?php if($value['id']==$v['brand_id']): ?>
