添加商品的分类

--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -130,6 +130,8 @@ body {
                     <li class="menu-item"><a href="__ROOT__/admin/category/add" target="main-frame">分类添加</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/brand/lst" target="main-frame">品牌列表</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/brand/add" target="main-frame">品牌添加</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/type/lst" target="main-frame">类型列表</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/type/add" target="main-frame">类型添加</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/goods/lst" target="main-frame">商品列表</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/goods/add" target="main-frame">商品添加</a></li>
                 </ul>
