添加商品Type页面

--- a/Application/Admin/View/Type/edit.html
+++ b/Application/Admin/View/Type/edit.html
@@ -1,4 +1,4 @@
-<layout name="layout" />
+<layout name="Layout/layout" />
 
 <div class="main-div">
     <form name="main_form" method="POST" action="__SELF__" enctype="multipart/form-data" >
