添加商品属性的内容

--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -127,13 +127,10 @@ body {
             商品管理
                 <ul>
                     <li class="menu-item"><a href="__ROOT__/admin/category/lst" target="main-frame">分类列表</a></li>
-                    <li class="menu-item"><a href="__ROOT__/admin/category/add" target="main-frame">分类添加</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/brand/lst" target="main-frame">品牌列表</a></li>
-                    <li class="menu-item"><a href="__ROOT__/admin/brand/add" target="main-frame">品牌添加</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/type/lst" target="main-frame">类型列表</a></li>
-                    <li class="menu-item"><a href="__ROOT__/admin/type/add" target="main-frame">类型添加</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/attribute/lst" target="main-frame">属性列表</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/goods/lst" target="main-frame">商品列表</a></li>
-                    <li class="menu-item"><a href="__ROOT__/admin/goods/add" target="main-frame">商品添加</a></li>
                 </ul>
             </li>
             <!--<li class="explode" key="03_brand" name="menu">-->
