--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -129,7 +129,7 @@ body {
                     <li class="menu-item"><a href="__ROOT__/admin/category/lst" target="main-frame">分类列表</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/brand/lst" target="main-frame">品牌列表</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/type/lst" target="main-frame">类型列表</a></li>
-                    <li class="menu-item"><a href="__ROOT__/admin/attribute/lst" target="main-frame">属性列表</a></li>
+                    <!--<li class="menu-item"><a href="__ROOT__/admin/attribute/lst" target="main-frame">属性列表</a></li>-->
                     <li class="menu-item"><a href="__ROOT__/admin/goods/lst" target="main-frame">商品列表</a></li>
                 </ul>
             </li>
