--- a/Application/Admin/View/Attribute/lst.html
+++ b/Application/Admin/View/Attribute/lst.html
@@ -30,7 +30,7 @@
             <th>属性名称</th>
             <th>属性类型</th>
             <th>属性可选值</th>
-            <th>所属类型Id</th>
+            <th>所属类型</th>
             <th width="60">操作</th>
         </tr>
         <?php foreach ($data as $k => $v): ?>
@@ -38,7 +38,7 @@
             <td><?php echo $v['attr_name']; ?></td>
             <td><?php echo $v['attr_type']; ?></td>
             <td><?php echo $v['attr_option_values']; ?></td>
-            <td><?php echo $v['type_id']; ?></td>
+            <td><?php echo $v['type_name']; ?></td>
             <td align="center">
                 <a href="<?php echo U('edit?id='.$v['id'].'&p='.I('get.p').'&type_id='.I('get.type_id')); ?>"
                    title="编辑">编辑</a> |
