--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -131,7 +131,18 @@
 
             <!-- 商品属性 -->
             <table width="90%" id="properties-table" style="display: none;" align="center">
-                <tbody></tbody>
+                <tbody>
+                <tr align="center">
+                    <td width="90%">
+                        <span>商品属性 : </span><?php buildSelect('type', type_id, 'id', 'type_name');?>
+                    </td>
+                </tr>
+                <tr align="center">
+                    <td width="90%">
+                        <ul style="list-style: none;" id="attr_list"></ul>
+                    </td>
+                </tr>
+                </tbody>
             </table>
 
             <!-- 商品相册 -->
@@ -309,5 +320,72 @@
             _ret += "</li>";
         }
         return _ret;
+    }
+
+
+    // 选择类型获取属性的AJAX
+    $("select[name=type_id]").change(function () {
+        // 获取当前选中的类型的id
+        var typeId = $(this).val();
+        // 如果选择了一个类型就执行AJAX取属性
+        if (typeId > 0) {
+            // 根据类型ID执行AJAX取出这个类型下的属性，并获取返回的JSON数据
+            $.ajax({
+                type: "GET",
+                url: "<?php echo U('attribute/ajaxGetAttr', '', FALSE); ?>/type_id/" + typeId,
+                dataType: "json",
+                success: function (data) {
+                    /** 把服务器返回的属性循环拼成一个LI字符串，并显示在页面中 **/
+                    var li = "";
+                    // 循环每个属性
+                    $(data).each(function (k, v) {
+                        li += '<li>';
+
+                        // 如果这个属性类型是可选的就有一个+
+                        if (v.attr_type == '可选')
+                            li += '<a onclick="addNewAttr(this);" href="#">[+]</a>';
+                        // 属性名称
+                        li += v.attr_name + ' : ';
+                        // 如果属性有可选值就做下拉框，否则做文本框
+                        if (v.attr_option_values == "")
+                            li += '<input type="text" name="attr_value[' + v.id + '][]" />';
+                        else {
+                            li += '<select name="attr_value[' + v.id + '][]"><option value="">请选择...</option>';
+                            // 把可选值根据,转化成数组
+                            var _attr = v.attr_option_values.split(',');
+                            // 循环每个值制作option
+                            for (var i = 0; i < _attr.length; i++) {
+                                li += '<option value="' + _attr[i] + '">';
+                                li += _attr[i];
+                                li += '</option>';
+                            }
+                            li += '</select>';
+                        }
+
+                        li += '</li>'
+                    });
+                    // 把拼好的LI放到 页面中
+                    $("#attr_list").html(li);
+                }
+            });
+        }
+        else
+            $("#attr_list").html("");  // 如果选的是请 选择就直接清空
+    });
+
+    // 点击属性的+号
+    function addNewAttr(a) {
+        // $(a)  --> 把a转换成jquery中的对象，然后才能调用jquery中的方法
+        // 先获取所在的li
+        var li = $(a).parent();
+        if ($(a).text() == '[+]') {
+            var newLi = li.clone();
+            // +变-
+            newLi.find("a").text('[-]');
+            // 新的放在li后面
+            li.after(newLi);
+        }
+        else
+            li.remove();
     }
 </script>
