--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -152,7 +152,53 @@
 
             <!-- 商品属性 -->
             <table width="90%" id="properties-table" style="display: none;" align="center">
-                <tbody></tbody>
+                <tbody>
+                <tr><td>
+                    商品类型：<?php buildSelect('Type', 'type_id', 'id', 'type_name', $data['type_id']); ?>
+                </td></tr>
+                <tr>
+                    <td><ul id="attr_list">
+                        <!-- 循环所有原属性值 -->
+                        <?php
+            		        $attrId = array();  // 所有出现过的属性ID
+            		        foreach ($gaData as $k => $v):
+                            // 判断如果这个属性ID第一次出现就是+否则是-
+                            if(in_array($v['attr_id'], $attrId))
+                                $opt = '-';
+                            else
+                            {
+                                $opt = '+';
+                                $attrId[] = $v['attr_id'];
+                            }
+                        ?>
+                        <li>
+                            <input type="hidden" name="goods_attr_id[]" value="<?php echo $v['id']; ?>" />
+                            <?php if($v['attr_type'] == '可选'): ?>
+                            <a onclick="addNewAttr(this);" href="#">[<?php echo $opt; ?>]</a>
+                            <?php endif; ?>
+                            <?php echo $v['attr_name']; ?> :
+                            <?php if($v['attr_option_values']):
+            						$attr = explode(',', $v['attr_option_values']);
+            				 ?>
+                            <select name="attr_value[<?php echo $v['attr_id']; ?>][]">
+                                <option value="">请选择</option>
+                                <?php foreach ($attr as $k1 => $v1):
+                                    if($v1 == $v['attr_value'])
+                                        $select = 'selected="selected"';
+                                    else
+                                        $select = '';
+                                ?>
+                                <option <?php echo $select; ?> value="<?php echo $v1; ?>"><?php echo $v1; ?></option>
+                                <?php endforeach; ?>
+                            </select>
+                            <?php else: ?>
+                                <input type="text" name="attr_value[<?php echo $v['attr_id']; ?>][]" value="<?php echo $v['attr_value']; ?>" />
+                            <?php endif; ?>
+                        </li>
+                        <?php endforeach; ?>
+                    </ul></td>
+                </tr>
+                </tbody>
             </table>
 
             <!-- 商品相册 -->
@@ -369,5 +415,103 @@
             _ret += "</li>";
         }
         return _ret;
+    }
+
+
+    // 选择类型获取属性的AJAX
+    $("select[name=type_id]").change(function(){
+        // 获取当前选中的类型的id
+        var typeId = $(this).val();
+        // 如果选择了一个类型就执行AJAX取属性
+        if(typeId > 0)
+        {
+            // 根据类型ID执行AJAX取出这个类型下的属性，并获取返回的JSON数据
+            $.ajax({
+                type : "GET",
+                url : "<?php echo U('ajaxGetAttr', '', FALSE); ?>/type_id/"+typeId,
+                dataType : "json",
+                success : function(data)
+                {
+                    /** 把服务器返回的属性循环拼成一个LI字符串，并显示在页面中 **/
+                    var li = "";
+                    // 循环每个属性
+                    $(data).each(function(k,v){
+                        li += '<li>';
+
+                        // 如果这个属性类型是可选的就有一个+
+                        if(v.attr_type == '可选')
+                            li += '<a onclick="addNewAttr(this);" href="#">[+]</a>';
+                        // 属性名称
+                        li += v.attr_name + ' : ';
+                        // 如果属性有可选值就做下拉框，否则做文本框
+                        if(v.attr_option_values == "")
+                            li += '<input type="text" name="attr_value['+v.id+'][]" />';
+                        else
+                        {
+                            li += '<select name="attr_value['+v.id+'][]"><option value="">请选择...</option>';
+                            // 把可选值根据,转化成数组
+                            var _attr = v.attr_option_values.split(',');
+                            // 循环每个值制作option
+                            for(var i=0; i<_attr.length; i++)
+                            {
+                                li += '<option value="'+_attr[i]+'">';
+                                li += _attr[i];
+                                li += '</option>';
+                            }
+                            li += '</select>';
+                        }
+
+                        li += '</li>'
+                    });
+                    // 把拼好的LI放到 页面中
+                    $("#attr_list").html(li);
+                }
+            });
+        }
+        else
+            $("#attr_list").html("");  // 如果选的是请 选择就直接清空
+    });
+
+    // 点击属性的+号
+    function addNewAttr(a)
+    {
+        // $(a)  --> 把a转换成jquery中的对象，然后才能调用jquery中的方法
+        // 先获取所在的li
+        var li = $(a).parent();
+        if($(a).text() == '[+]')
+        {
+            var newLi = li.clone();
+            // 去掉选中状态
+            newLi.find("option:selected").removeAttr("selected");
+            // 把克隆出来的隐藏域里的ID清空
+            newLi.find("input[name='goods_attr_id[]']").val("");
+            // +变-
+            newLi.find("a").text('[-]');
+            // 新的放在li后面
+            li.after(newLi);
+        }
+        else
+        {
+            // 先获取这个属性值的id
+            var gaid = li.find("input[name='goods_attr_id[]']").val();
+            // 如果没有ID就直接删除，如果有ID说明是旧的属性值需要AJAX删除
+            if(gaid == '')
+                li.remove();
+            else
+            {
+                if(confirm('如果删除了这个属性，那么相关的库存量数据也会被一起删除，确定要删除吗？'))
+                {
+                    $.ajax({
+                        type : "GET",
+                        url : "<?php echo U('ajaxDelAttr?goods_id='.$data['id'], '', FALSE); ?>/gaid/"+gaid,
+                        success : function(data)
+                        {
+                            // 再把页面中的记录删除
+                            li.remove();
+                        }
+                    });
+                }
+            }
+        }
     }
 </script>
