添加控制器

--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -133,16 +133,15 @@ body {
                     <li class="menu-item"><a href="__ROOT__/admin/goods/lst" target="main-frame">商品列表</a></li>
                 </ul>
             </li>
-            <!--<li class="explode" key="03_brand" name="menu">-->
-                <!--品牌管理-->
-                <!--<ul>-->
-                    <!--<li class="menu-item"><a href="__ROOT__/admin/brand/lst" target="main-frame">品牌列表</a></li>-->
-                    <!--<li class="menu-item"><a href="__ROOT__/admin/brand/add" target="main-frame">品牌添加</a></li>-->
-                    <!--<li class="menu-item"><a href="orderAdd.html" target="main-frame">添加订单</a></li>-->
-                    <!--<li class="menu-item"><a href="delivery_list.html" target="main-frame">发货单列表</a></li>-->
-                    <!--<li class="menu-item"><a href="back_list.html" target="main-frame">退货单列表</a></li>-->
-                <!--</ul>-->
-            <!--</li>-->
+
+            <li class="explode" key="03_rbac" name="menu">
+                RBAC
+                <ul>
+                    <li class="menu-item"><a href="__ROOT__/admin/privilege/lst" target="main-frame">权限列表</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/role/add" target="main-frame">角色列表</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/admin/lst" target="main-frame">管理员列表</a></li>
+                </ul>
+            </li>
             <!--<li class="explode" key="04_order" name="menu">-->
             <!--订单管理-->
                 <!--<ul>-->
