--- a/Application/Admin/View/Privilege/lst.html
+++ b/Application/Admin/View/Privilege/lst.html
@@ -8,7 +8,7 @@
             <th >模块名称</th>
             <th >控制器名称</th>
             <th >方法名称</th>
-            <th >上级权限Id</th>
+            <!--<th >上级权限Id</th>-->
 			<th width="60">操作</th>
         </tr>
 		<?php foreach ($data as $k => $v): ?>            
@@ -17,7 +17,7 @@
 				<td><?php echo $v['module_name']; ?></td>
 				<td><?php echo $v['controller_name']; ?></td>
 				<td><?php echo $v['action_name']; ?></td>
-				<td><?php echo $v['parent_id']; ?></td>
+				<!--<td><?php echo $v['parent_id']; ?></td>-->
 		        <td align="center">
 		        	<a href="<?php echo U('edit?id='.$v['id'].'&p='.I('get.p')); ?>" title="编辑">编辑</a> |
 	                <a href="<?php echo U('delete?id='.$v['id'].'&p='.I('get.p')); ?>" onclick="return confirm('确定要删除吗？');" title="移除">移除</a> 
