添加控制器

--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -138,7 +138,7 @@ body {
                 RBAC
                 <ul>
                     <li class="menu-item"><a href="__ROOT__/admin/privilege/lst" target="main-frame">权限列表</a></li>
-                    <li class="menu-item"><a href="__ROOT__/admin/role/add" target="main-frame">角色列表</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/role/lst" target="main-frame">角色列表</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/admin/lst" target="main-frame">管理员列表</a></li>
                 </ul>
             </li>
