--- a/Application/Admin/View/Login/login.html
+++ b/Application/Admin/View/Login/login.html
@@ -38,7 +38,7 @@
                         <td colspan="2" align="right">
                             <img style="width: 150px;height: 30px;" style="cursor:pointer;"
                                  onclick="this.src='<?php echo U('chkcode');?>?time='+Math.random();"
-                                 src="<?php echo U('chkcode'); ?>"/>
+                                 src="<?php echo U('chkcode'); ?>?time='+Math.random();"/>
                         </td>
                     </tr>
                     <tr>
