--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -1,4 +1,7 @@
 <layout name="Layout/layout"/>
+
 <!-- 引入导航条文件  -->
 <include file="Layout/nav"/>
 
+<!-- 引入帮助文件  -->
+<include file="Layout/help"/>
