--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -1,5 +1,9 @@
 <layout name="Layout/layout"/>
 
+<!-- 引入这个页面特有的CSS和JS -->
+<link rel="stylesheet" href="<?php echo C('HOME_CSS_URL');?>/index.css" type="text/css">
+<script type="text/javascript" src="<?php echo C('HOME_JS_URL');?>/index.js"></script>
+
 <!-- 引入导航条文件  -->
 <include file="Layout/nav"/>
 
