--- a/Application/Home/View/Layout/nav.html
+++ b/Application/Home/View/Layout/nav.html
@@ -57,9 +57,9 @@
                     <div class="viewlist mt10">
                         <h3>最近浏览的商品：</h3>
                         <ul>
-                            <li><a href=""><img src="images/view_list1.jpg" alt="" /></a></li>
-                            <li><a href=""><img src="images/view_list2.jpg" alt="" /></a></li>
-                            <li><a href=""><img src="images/view_list3.jpg" alt="" /></a></li>
+                            <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/view_list1.jpg" alt="" /></a></li>
+                            <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/view_list2.jpg" alt="" /></a></li>
+                            <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/view_list3.jpg" alt="" /></a></li>
                         </ul>
                     </div>
                 </dd>
