--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -47,17 +47,17 @@
                             <button id="btn_add_category" style="float: left;">添加一个拓展分类</button>
                             <ul id="ul_category" style="padding-left:0px;list-style: none; float: left;">
                                 <?php foreach($extCatDatasByGoodsId as $key1 => $value1):?>
-                                    <li>
+                                <li>
                                     <select name="ext_cat_id[]">
-                                    <option value="">请选择拓展分类</option>
-                                    <?php foreach($catGoodsData as $key2 => $value2):?>
-                                    <option value="<?php echo $value2['id'];?>"
-                                    <?php if($value1['cat_id']==$value2['id']) echo "selected='selected'";?>
-                                    ><?php echo str_repeat('*',8*$value2['level']).$value2['cat_name'];?></option>
-                                    <?php endforeach;?>
+                                        <option value="">请选择拓展分类</option>
+                                        <?php foreach($catGoodsData as $key2 => $value2):?>
+                                        <option value="<?php echo $value2['id'];?>"
+                                        <?php if($value1['cat_id']==$value2['id']) echo "selected='selected'";?>
+                                        ><?php echo str_repeat('*',8*$value2['level']).$value2['cat_name'];?></option>
+                                        <?php endforeach;?>
                                     </select>
                                     <button onclick="$(this).parent().remove();return false">删除拓展分类</button>
-                                    </li>
+                                </li>
                                 <?php endforeach;?>
                                 <!--<li>-->
                                 <!--<select name="ext_cat_id[]">-->
@@ -116,6 +116,61 @@
                                name="is_on_sale" <?php if($data['is_on_sale']=='否') echo "checked";?>/>否
                     </td>
                 </tr>
+
+                <tr>
+                    <td class="label">促销价格：</td>
+                    <td>
+                        价格：￥<input type="text" name="promote_price" size="8"
+                                   value="<?php echo $data['promote_price']; ?>"/>元
+                        开始时间：<input type="text" id="promote_start_date" name="promote_start_date"
+                                    value="<?php echo $data['promote_start_date']; ?>"/>
+                        结束时间：<input type="text" id="promote_end_date" name="promote_end_date"
+                                    value="<?php echo $data['promote_end_date']; ?>"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">是否新品：</td>
+                    <td>
+                        <input type="radio" name="is_new"
+                               value="是" <?php if($data['is_new'] == '是') echo 'checked="checked"'; ?> /> 是
+                        <input type="radio" name="is_new"
+                               value="否" <?php if($data['is_new'] == '否') echo 'checked="checked"'; ?> /> 否
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">是否精品：</td>
+                    <td>
+                        <input type="radio" name="is_best"
+                               value="是" <?php if($data['is_best'] == '是') echo 'checked="checked"'; ?> /> 是
+                        <input type="radio" name="is_best"
+                               value="否" <?php if($data['is_best'] == '否') echo 'checked="checked"'; ?> /> 否
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">是否热卖：</td>
+                    <td>
+                        <input type="radio" name="is_hot"
+                               value="是" <?php if($data['is_hot'] == '是') echo 'checked="checked"'; ?> /> 是
+                        <input type="radio" name="is_hot"
+                               value="否" <?php if($data['is_hot'] == '否') echo 'checked="checked"'; ?> /> 否
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">推荐到楼层：</td>
+                    <td>
+                        <input type="radio" name="is_floor"
+                               value="是" <?php if($data['is_floor'] == '是') echo 'checked="checked"'; ?> /> 是
+                        <input type="radio" name="is_floor"
+                               value="否" <?php if($data['is_floor'] == '否') echo 'checked="checked"'; ?> /> 否
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">排序：</td>
+                    <td>
+                        <input type="text" name="sort_num" value="<?php echo $data['sort_num']; ?>" size="8"/>
+                    </td>
+                </tr>
+
                 </tbody>
             </table>
 
@@ -153,50 +208,56 @@
             <!-- 商品属性 -->
             <table width="90%" id="properties-table" style="display: none;" align="center">
                 <tbody>
-                <tr><td align="center">
-                    商品类型：<?php buildSelect('Type', 'type_id', 'id', 'type_name', $data['type_id']); ?>
-                </td></tr>
                 <tr>
-                    <td align="center"><ul style="list-style: none;" id="attr_list">
-                        <!-- 循环所有原属性值 -->
-                        <?php
+                    <td align="center">
+                        商品类型：<?php buildSelect('Type', 'type_id', 'id', 'type_name', $data['type_id']); ?>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        <ul style="list-style: none;" id="attr_list">
+                            <!-- 循环所有原属性值 -->
+                            <?php
             		        $attrId = array();  // 所有出现过的属性ID
             		        foreach ($gaData as $k => $v):
                             // 判断如果这个属性ID第一次出现就是+否则是-
                             if(in_array($v['attr_id'], $attrId))
-                                $opt = '-';
+                            $opt = '-';
                             else
                             {
-                                $opt = '+';
-                                $attrId[] = $v['attr_id'];
+                            $opt = '+';
+                            $attrId[] = $v['attr_id'];
                             }
-                        ?>
-                        <li>
-                            <input type="hidden" name="goods_attr_id[]" value="<?php echo $v['id']; ?>" />
-                            <?php if($v['attr_type'] == '可选'): ?>
-                            <a onclick="addNewAttr(this);" href="#">[<?php echo $opt; ?>]</a>
-                            <?php endif; ?>
-                            <?php echo $v['attr_name']; ?> :
-                            <?php if($v['attr_option_values']):
+                            ?>
+                            <li>
+                                <input type="hidden" name="goods_attr_id[]" value="<?php echo $v['id']; ?>"/>
+                                <?php if($v['attr_type'] == '可选'): ?>
+                                <a onclick="addNewAttr(this);" href="#">[<?php echo $opt; ?>]</a>
+                                <?php endif; ?>
+                                <?php echo $v['attr_name']; ?> :
+                                <?php if($v['attr_option_values']):
             						$attr = explode(',', $v['attr_option_values']);
             				 ?>
-                            <select name="attr_value[<?php echo $v['attr_id']; ?>][]">
-                                <option value="">请选择</option>
-                                <?php foreach ($attr as $k1 => $v1):
+                                <select name="attr_value[<?php echo $v['attr_id']; ?>][]">
+                                    <option value="">请选择</option>
+                                    <?php foreach ($attr as $k1 => $v1):
                                     if($v1 == $v['attr_value'])
-                                        $select = 'selected="selected"';
+                                    $select = 'selected="selected"';
                                     else
-                                        $select = '';
-                                ?>
-                                <option <?php echo $select; ?> value="<?php echo $v1; ?>"><?php echo $v1; ?></option>
-                                <?php endforeach; ?>
-                            </select>
-                            <?php else: ?>
-                                <input type="text" name="attr_value[<?php echo $v['attr_id']; ?>][]" value="<?php echo $v['attr_value']; ?>" />
-                            <?php endif; ?>
-                        </li>
-                        <?php endforeach; ?>
-                    </ul></td>
+                                    $select = '';
+                                    ?>
+                                    <option
+                                    <?php echo $select; ?> value="<?php echo $v1; ?>"><?php echo $v1; ?></option>
+                                    <?php endforeach; ?>
+                                </select>
+                                <?php else: ?>
+                                <input type="text" name="attr_value[<?php echo $v['attr_id']; ?>][]"
+                                       value="<?php echo $v['attr_value']; ?>"/>
+                                <?php endif; ?>
+                            </li>
+                            <?php endforeach; ?>
+                        </ul>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -399,7 +460,19 @@
     });
 
     //获取最新的子分类内容
-    catDatas = <?php if($catGoodsDataJson){echo $catGoodsDataJson;}else {echo 'null';}?>;
+    catDatas =
+    <
+        ? php
+    if ($catGoodsDataJson) {
+        echo
+        $catGoodsDataJson;
+    } else {
+        echo
+        'null';
+    }
+        ?
+    >
+    ;
     //创建select标签
     function createSelect(data) {
         var _ret = "";
@@ -411,7 +484,7 @@
                 _ret += "<option value='" + data[i].id + "'>" + new Array(8).join("*") + data[i].cat_name + new Array(8).join("*") + "</option>";
             }
             _ret += "</select>";
-            _ret+="<button onclick='$(this).parent().remove();return false'>删除拓展分类</button>";
+            _ret += "<button onclick='$(this).parent().remove();return false'>删除拓展分类</button>";
             _ret += "</li>";
         }
         return _ret;
@@ -419,42 +492,38 @@
 
 
     // 选择类型获取属性的AJAX
-    $("select[name=type_id]").change(function(){
+    $("select[name=type_id]").change(function () {
         // 获取当前选中的类型的id
         var typeId = $(this).val();
         // 如果选择了一个类型就执行AJAX取属性
-        if(typeId > 0)
-        {
+        if (typeId > 0) {
             // 根据类型ID执行AJAX取出这个类型下的属性，并获取返回的JSON数据
             $.ajax({
-                type : "GET",
-                url : "<?php echo U('ajaxGetAttr', '', FALSE); ?>/type_id/"+typeId,
-                dataType : "json",
-                success : function(data)
-                {
+                type: "GET",
+                url: "<?php echo U('ajaxGetAttr', '', FALSE); ?>/type_id/" + typeId,
+                dataType: "json",
+                success: function (data) {
                     /** 把服务器返回的属性循环拼成一个LI字符串，并显示在页面中 **/
                     var li = "";
                     // 循环每个属性
-                    $(data).each(function(k,v){
+                    $(data).each(function (k, v) {
                         li += '<li>';
 
                         // 如果这个属性类型是可选的就有一个+
-                        if(v.attr_type == '可选')
+                        if (v.attr_type == '可选')
                             li += '<a onclick="addNewAttr(this);" href="#">[+]</a>';
                         // 属性名称
                         li += v.attr_name + ' : ';
                         // 如果属性有可选值就做下拉框，否则做文本框
-                        if(v.attr_option_values == "")
-                            li += '<input type="text" name="attr_value['+v.id+'][]" />';
-                        else
-                        {
-                            li += '<select name="attr_value['+v.id+'][]"><option value="">请选择...</option>';
+                        if (v.attr_option_values == "")
+                            li += '<input type="text" name="attr_value[' + v.id + '][]" />';
+                        else {
+                            li += '<select name="attr_value[' + v.id + '][]"><option value="">请选择...</option>';
                             // 把可选值根据,转化成数组
                             var _attr = v.attr_option_values.split(',');
                             // 循环每个值制作option
-                            for(var i=0; i<_attr.length; i++)
-                            {
-                                li += '<option value="'+_attr[i]+'">';
+                            for (var i = 0; i < _attr.length; i++) {
+                                li += '<option value="' + _attr[i] + '">';
                                 li += _attr[i];
                                 li += '</option>';
                             }
@@ -473,13 +542,11 @@
     });
 
     // 点击属性的+号
-    function addNewAttr(a)
-    {
+    function addNewAttr(a) {
         // $(a)  --> 把a转换成jquery中的对象，然后才能调用jquery中的方法
         // 先获取所在的li
         var li = $(a).parent();
-        if($(a).text() == '[+]')
-        {
+        if ($(a).text() == '[+]') {
             var newLi = li.clone();
             // 去掉选中状态
             newLi.find("option:selected").removeAttr("selected");
@@ -490,22 +557,18 @@
             // 新的放在li后面
             li.after(newLi);
         }
-        else
-        {
+        else {
             // 先获取这个属性值的id
             var gaid = li.find("input[name='goods_attr_id[]']").val();
             // 如果没有ID就直接删除，如果有ID说明是旧的属性值需要AJAX删除
-            if(gaid == '')
+            if (gaid == '')
                 li.remove();
-            else
-            {
-                if(confirm('如果删除了这个属性，那么相关的库存量数据也会被一起删除，确定要删除吗？'))
-                {
+            else {
+                if (confirm('如果删除了这个属性，那么相关的库存量数据也会被一起删除，确定要删除吗？')) {
                     $.ajax({
-                        type : "GET",
-                        url : "<?php echo U('goodsAttr/ajaxDelAttr?goods_id='.$data['id'], '', FALSE); ?>/gaid/"+gaid,
-                        success : function(data)
-                        {
+                        type: "GET",
+                        url: "<?php echo U('goodsAttr/ajaxDelAttr?goods_id='.$data['id'], '', FALSE); ?>/gaid/" + gaid,
+                        success: function (data) {
                             // 再把页面中的记录删除
                             li.remove();
                         }
@@ -514,4 +577,24 @@
             }
         }
     }
+</script>
+
+<!-- 引入时间插件 -->
+<script type="text/javascript" src="<?php echo C('DATETIMEPICKER_URL');?>/jquery-1.7.2.min.js"></script>
+<link href="<?php echo C('DATETIMEPICKER_URL');?>/jquery-ui-1.9.2.custom.min.css" rel="stylesheet" type="text/css"/>
+<script type="text/javascript" charset="utf-8"
+        src="<?php echo C('DATETIMEPICKER_URL');?>/jquery-ui-1.9.2.custom.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="<?php echo C('DATETIMEPICKER_URL');?>/datepicker-zh_cn.js"></script>
+<link rel="stylesheet" media="all" type="text/css"
+      href="<?php echo C('DATETIMEPICKER_URL');?>/time/jquery-ui-timepicker-addon.min.css"/>
+<script type="text/javascript"
+        src="<?php echo C('DATETIMEPICKER_URL');?>/time/jquery-ui-timepicker-addon.min.js"></script>
+<script type="text/javascript"
+        src="<?php echo C('DATETIMEPICKER_URL');?>/time/i18n/jquery-ui-timepicker-addon-i18n.min.js"></script>
+<script>
+    // 添加时间插件
+    $.timepicker.setDefaults($.timepicker.regional['zh-CN']);  // 设置使用中文
+
+    $("#promote_start_date").datetimepicker();
+    $("#promote_end_date").datetimepicker();
 </script>
